# sprite_studio_converter

./: Cargo.toml
src/: convert.rs  error.rs  lib.rs  prefab.rs  sprite_sheet.rs  timeline.rs  types.rs
src/convert/key_frame/: cell.rs  rotation.rs
src/prefab/: convert.rs  key_frame.rs
src/prefab/key_frame/: position.rs  scale.rs  user.rs
src/timeline/: interpolate.rs
