[package]
name = "sprite-studio-converter"
version = "0.1.0"
authors = ["Kaneyuki Hiromasa <matsugen2511@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json= "1.0.48"
sprite_studio={path = "../sprite_studio/"}
amethyst-sprite-studio={path = "../amethyst-sprite-studio/"}
amethyst = {git = "https://github.com/amethyst/amethyst.git", features = ["vulkan"] }
ron= "0.5.1"
log= "0.4.8"
itertools= "0.9.0"
failure= "0.1.7"
enum-iterator= "0.6.0"
